--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,16 @@
+/* style.css */
 .container {
   background: dodgerblue;
   border: 4px solid midnightblue;
-  width: 400px;
+  width: 400px; display: flex;
+  align-items:center;
+  justify-content: center;
+
   height: 300px;
+ /*  display: flex;
+  align-items:center;
+  justify-content: center;
+ */
 }
 
 .box {
@@ -12,4 +20,5 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+  /* flex: 1 0 1; */
 }
