--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -10,6 +11,20 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+}
+
+.box {
+  /* border: 3px solid blue; */
+  width: 200px;
+  padding: 10px;
+  align-items: center;
+  text-align: center;
+}
+
+.case {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 /* do not edit this footer */
